--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -1,16 +1,14 @@
 server:
   port: 8081
-
 spring:
   application:
     name: cloud-payment-service
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource  #当前数据源操作类型
-    driver-class-name: com.mysql.jdbc.Driver    # mysql驱动包
-    url: jdbc:mysql://localhost:3306/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver   # mysql驱动包
+    url: jdbc:mysql://localhost:3306/order_db?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
     password: admin
-
 mybatis:
-  mapperLocation: classPath:mapper/*.xml
+  mapperLocations: classPath:mapper/*.xml
   type-aliases-package: com.atguigu.springcloud.entites #所有Entity别名类所在包
