--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -10,5 +10,5 @@ spring:
     username: root
     password: admin
 mybatis:
-  mapperLocations: classPath:mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.atguigu.springcloud.entites #所有Entity别名类所在包
