--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -12,3 +12,11 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.atguigu.springcloud.entites #所有Entity别名类所在包
+eureka:
+  client:
+    #表示是否将自己注册进EurekaServer默认为true
+    fetch-registry: true
+    #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合Ribbon使用负载均衡
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
