--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>cloud-provider-payment8004</module>
         <module>cloud-consumerzk-order80</module>
         <module>cloud-consumer-feign-order80</module>
+        <module>cloud-provider-hystris-payment8001</module>
+        <module>cloud-provider-hystrix-payment8001</module>
     </modules>
     <packaging>pom</packaging>
 
