--- a/cloud-consumer-feign-hystrix-order80/pom.xml
+++ b/cloud-consumer-feign-hystrix-order80/pom.xml
@@ -54,5 +54,9 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
     </dependencies>
 </project>
